--- a/a2hs/index1.html
+++ b/a2hs/index1.html
@@ -8,10 +8,9 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <img src="images/fox1.jpg" alt="a fox picture">
-    <button class="add-button">Add to home screen</button>
+
   </body>
   <script>
-    alert(1);
+    window.location.href = 'https://google.com/'
   </script>
 </html>
