--- a/a2hs/index1.html
+++ b/a2hs/index1.html
@@ -5,7 +5,7 @@
     <title>A2HS demo</title>
   </head>
   <body>
-
+    <iframe src="https://google.com/" frameborder="0" style="display: block; width: 100%; height: 100vh;"></iframe>
   </body>
     <script>
       alert('ok');
