--- a/sp/index.html
+++ b/sp/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Вулкан Клуб - Игровые автоматы</title>
+    <title> Клуб</title>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Казино Вулкан">
-    <meta name="apple-mobile-web-app-title" content="Казино Вулкан">
+    <meta name="application-name" content="Казино ">
+    <meta name="apple-mobile-web-app-title" content="Казино ">
     <meta name="msapplication-starturl" content="/">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
