--- a/sp/index.html
+++ b/sp/index.html
@@ -80,12 +80,11 @@
 
 <div id="mf"></div>
 
-<a class="button1" style="display: flex;">Установить</a>
-<a class="button2" style="display: flex;">Установить</a>
+<a class="button1">Установить</a>
+<a class="button2">Установить</a>
 
 
 <script src="./files/application.js"></script>
-<script src="./files/button.js"></script>
 
 </body>
 </html>
