--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
+    <script src="jquery-3.3.1.min.js"></script>
     <script>
         $(document).ready(function () {
             if (window.matchMedia('(display-mode: fullscreen)').matches) {
