--- a/sp/index.html
+++ b/sp/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--<link rel="manifest" href="manifest.json">-->
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Казино ">
@@ -68,8 +68,7 @@
 
 <div id="mf"></div>
 
-<a class="button1">Установить</a>
-<a class="button2">Установить</a>
+<a class="button1" style="display: none;">Установить</a>
 
 
 <script src="./files/application.js"></script>
