--- a/v2/index.html
+++ b/v2/index.html
@@ -1614,7 +1614,8 @@
         color: #fff;
         -webkit-border-radius: 3px;
         border-radius: 3px;
-        text-transform: uppercase
+        text-transform: uppercase;
+        border: none;
     }
 
     .button1:focus, .button1:hover {
@@ -1631,7 +1632,8 @@
         color: #fff;
         -webkit-border-radius: 3px;
         border-radius: 3px;
-        text-transform: uppercase
+        text-transform: uppercase;
+        border: none;
     }
 
     .button2:focus, .button2:hover {
@@ -1693,7 +1695,7 @@
                         <img src="./files/18-icon.png" alt="">
                     </div>
                     <div class="top-btn-wrapper clearfix">
-                        <a class="button1" style="display: none;">Установить</a>
+                        <button class="button1" style="display: none;">Установить</button>
                     </div>
                 </div>
             </div>
@@ -1826,7 +1828,7 @@
                 </div>
             </div>
             <div class="top-btn-wrapper clearfix">
-                <a class="button1" style="display: none;">Установить</a>
+                <button class="button1 button2" style="display: none;">Установить</button>
             </div>
         </div>
     </section>
