--- a/exp2/index1.html
+++ b/exp2/index1.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>A2HS demo</title>
-  </head>
-  <body>
-<iframe src="https://www.weather.gov/" frameborder="0" style="display: block; width: 100%; height: 100vh;"></iframe>  </body>
-    <script>
-  </script>
+    <title></title>
+    <style>
+        html {
+            height: 100%;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+        }
+
+        .window {
+            display: block;
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+<iframe class="window" src="https://play2land.com/2100/?refCode=wp_w18470p308_WA" frameborder="0"></iframe>
+</body>
+<script>
+</script>
 </html>
