--- a/exp2/index1.html
+++ b/exp2/index1.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-<iframe class="window" src="https://play2land.com/2100/?refCode=wp_w18470p308_WA" frameborder="0"></iframe>
+<iframe class="window"  frameborder="0"></iframe>
 </body>
 <script>
 </script>
