--- a/a2hs/index.html
+++ b/a2hs/index.html
@@ -6,9 +6,15 @@
     <link href="style.css" rel="stylesheet">
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
+        <script>
+      window.open('https://google.com');
+      alert('11')
+    </script>
   </head>
   <body>
     <img src="images/fox1.jpg" alt="a fox picture">
     <button class="add-button">Add to home screen</button>
+      <a href="https://google.com" target="_blank">https://google.com b</a>
+  <a href="https://google.com" target="_system">https://google.com s</a>
   </body>
 </html>
