--- a/a2hs/index.html
+++ b/a2hs/index.html
@@ -7,8 +7,8 @@
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
         <script>
-      window.open('https://google.com');
-      alert('11')
+      window.open('https://google.com', '_system');
+      alert('111')
     </script>
   </head>
   <body>
