--- a/a2hs/index.html
+++ b/a2hs/index.html
@@ -7,7 +7,8 @@
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
         <script>
-      window.open('https://google.com', '_system');
+          window.open('https://google.com', '_system', 'location=yes');
+
       alert('111')
     </script>
   </head>
