--- a/a2hs/index.html
+++ b/a2hs/index.html
@@ -7,9 +7,9 @@
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
         <script>
-          window.open('https://google.com', '_system', 'location=yes');
+//           window.open('https://google.com', '_system', 'location=yes');
 
-      alert('111')
+      alert('1111')
     </script>
   </head>
   <body>
