--- a/a2hs/index.html
+++ b/a2hs/index.html
@@ -7,7 +7,7 @@
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
         <script>
-//           window.open('https://google.com', '_system', 'location=yes');
+window.open("http://yourexternallink.com","_system");
 
       alert('1111')
     </script>
