--- a/a2hs/index.html
+++ b/a2hs/index.html
@@ -7,9 +7,9 @@
     <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.webmanifest">
         <script>
-window.open("http://yourexternallink.com","_system");
+window.open("https://google.com","_system");
 
-      alert('2')
+      alert('22')
     </script>
   </head>
   <body>
