--- a/a2hs/index1.html
+++ b/a2hs/index1.html
@@ -5,7 +5,8 @@
     <title>A2HS demo</title>
   </head>
   <body>
-<iframe src="https://www.weather.gov/" frameborder="0" style="display: block; width: 100%; height: 100vh;"></iframe>  </body>
+    mana mana
+  </body>
     <script>
   </script>
 </html>
